질문 및 답변 모델 추가, 질문 상세 및 삭제 확인 페이지 템플릿 생성

--- a/pybo/templates/pybo/index.html
+++ b/pybo/templates/pybo/index.html
@@ -114,7 +114,9 @@
                     {% for question in question_list %}
                     <tr>
                         <td>{{ forloop.counter }}</td>
-                        <td>{{ question.subject }}</td>
+                        <td>
+                            <a href="{% url 'question_detail' question.id %}">{{ question.subject }}</a>
+                        </td>
                         <td>{{ question.create_date }}</td>
                     </tr>
                     {% empty %}
